--- a/index.html
+++ b/index.html
@@ -102,6 +102,13 @@
         </div>
       </div>
     </div>
+    <footer>
+      <a href="https://github.com/nadegerodier/weather-app" class="footer"
+        >Open-sourced code</a
+      >
+      by
+      <a href="mailto:nadege.rodier@gmail.com" class="footer">Nadege Rodier</a>
+    </footer>
     <script src="src/app.js"></script>
   </body>
 </html>
