Updated footer opacity

--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
       <a href="https://github.com/nadegerodier/weather-app" class="footer"
         >Open-sourced code</a
       >
-      by
+      <span id="footer">by</span>
       <a href="mailto:nadege.rodier@gmail.com" class="footer">Nadege Rodier</a>
     </footer>
     <script src="src/app.js"></script>
