--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
     </div>
     <footer>
       <a href="https://github.com/nadegerodier/weather-app" class="footer"
-        >Open-sourced code</a
+        >Open-source code</a
       >
       <span id="footer">by</span>
       <a href="mailto:nadege.rodier@gmail.com" class="footer">Nadege Rodier</a>
