Added target _blank attribute to GitHub link

--- a/index.html
+++ b/index.html
@@ -103,7 +103,10 @@
       </div>
     </div>
     <footer>
-      <a href="https://github.com/nadegerodier/weather-app" class="footer"
+      <a
+        href="https://github.com/nadegerodier/weather-app"
+        target="_blank"
+        class="footer"
         >Open-source code</a
       >
       <span id="footer">by</span>
