Removed space between temperature value and unit

--- a/index.html
+++ b/index.html
@@ -64,8 +64,8 @@
             </div>
             <div class="col-3 temp-data">
               <i class="fa-solid fa-sun"></i>
-              <span id="current-temp-value">71</span>
-              <span class="temp-scale-selector"
+              <span id="current-temp-value">71</span
+              ><span class="temp-scale-selector"
                 >°C<!--<a href="#" id="fahrenheit">°F</a> |
                 <a href="#" id="celsius">°C</a>-->
               </span>
