--- a/index.html
+++ b/index.html
@@ -101,17 +101,19 @@
           </div>
         </div>
       </div>
+      <footer>
+        <a
+          href="https://github.com/nadegerodier/weather-app"
+          target="_blank"
+          class="footer"
+          >Open-source code</a
+        >
+        <span id="footer">by</span>
+        <a href="mailto:nadege.rodier@gmail.com" class="footer"
+          >Nadege Rodier</a
+        >
+      </footer>
     </div>
-    <footer>
-      <a
-        href="https://github.com/nadegerodier/weather-app"
-        target="_blank"
-        class="footer"
-        >Open-source code</a
-      >
-      <span id="footer">by</span>
-      <a href="mailto:nadege.rodier@gmail.com" class="footer">Nadege Rodier</a>
-    </footer>
     <script src="src/app.js"></script>
   </body>
 </html>
