Cleaned up HTML to remove dummy values

--- a/index.html
+++ b/index.html
@@ -58,21 +58,21 @@
 
           <div class="row current-weather">
             <div class="col-5 location-data">
-              <h1>Austin</h1>
-              <h2>Saturday 3:43pm</h2>
-              <h3>Sunny</h3>
+              <h1></h1>
+              <h2></h2>
+              <h3></h3>
             </div>
             <div class="col-3 temp-data">
               <i class="fa-solid fa-sun"></i>
-              <span id="current-temp-value">71</span
+              <span id="current-temp-value"></span
               ><span class="temp-scale-selector"
                 >°C<!--<a href="#" id="fahrenheit">°F</a> |
                 <a href="#" id="celsius">°C</a>-->
               </span>
             </div>
             <div class="col-3 weather-conditions">
-              Humidity: <span id="humidity">43</span>% <br />
-              Wind: <span id="wind">6</span> km/h
+              Humidity: <span id="humidity"></span>% <br />
+              Wind: <span id="wind"></span> km/h
             </div>
           </div>
 
