--- a/index.html
+++ b/index.html
@@ -63,8 +63,9 @@
               <h3></h3>
             </div>
             <div class="col-3 temp-data">
-              <i class="fa-solid fa-sun"></i>
-              <span id="current-temp-value"></span
+              <img src="#" alt="weather icon" id="current-weather-icon" /><span
+                id="current-temp-value"
+              ></span
               ><span class="temp-scale-selector"
                 >°C<!--<a href="#" id="fahrenheit">°F</a> |
                 <a href="#" id="celsius">°C</a>-->
