Turned autocomplete off on search form

--- a/index.html
+++ b/index.html
@@ -41,6 +41,7 @@
                     placeholder="Search for a city"
                     autofocus="on"
                     id="city-search-input"
+                    autocomplete="off"
                   />
                 </div>
               </div>
