Added Fahrenheit with link in HTML/CSS

--- a/index.html
+++ b/index.html
@@ -68,9 +68,9 @@
                 id="current-temp-value"
               ></span
               ><span class="temp-scale-selector"
-                >°C<!--<a href="#" id="fahrenheit">°F</a> |
-                <a href="#" id="celsius">°C</a>-->
-              </span>
+                ><span id="celsius">°C</span> |
+                <a href="#" id="fahrenheit">°F</a></span
+              >
             </div>
             <div class="col-3 weather-conditions">
               Humidity: <span id="humidity"></span>% <br />
