--- a/index.html
+++ b/index.html
@@ -63,16 +63,16 @@
               <h2></h2>
               <h3></h3>
             </div>
-            <div class="col-3 temp-data">
+            <div class="col-4 temp-data">
               <img src="#" alt="weather icon" id="current-weather-icon" /><span
                 id="current-temp-value"
               ></span
               ><span class="temp-scale-selector"
-                ><span id="celsius">°C</span> |
+                ><a href="#" id="celsius" class="active">°C</a> |
                 <a href="#" id="fahrenheit">°F</a></span
               >
             </div>
-            <div class="col-3 weather-conditions">
+            <div class="col-2 weather-conditions">
               Humidity: <span id="humidity"></span>% <br />
               Wind: <span id="wind"></span> km/h
             </div>
