Updated forecast section in HTML/CSS

--- a/index.html
+++ b/index.html
@@ -79,10 +79,13 @@
           </div>
 
           <hr />
-          <div class="row future-weather">
+          <div class="row weather-forecast">
             <div class="col">
-              Sun <br /><i class="fa-solid fa-cloud-sun"></i><br />
-              84°/<span class="night-temp">71°</span>
+              <div class="weather-forecast-date">Sun</div>
+              <img src="#" alt="" />
+              <div class="weather-forecast-temperatures"></div>
+              <span class="weather-forecast-temperature-max">84°/</span
+              ><span class="weather-forecast-temperature-min">71°</span>
             </div>
             <div class="col">
               Mon <br /><i class="fa-solid fa-cloud-showers-heavy"></i><br />
