Added forecast in JS

--- a/index.html
+++ b/index.html
@@ -79,31 +79,7 @@
           </div>
 
           <hr />
-          <div class="row weather-forecast">
-            <div class="col">
-              <div class="weather-forecast-date">Sun</div>
-              <img src="#" alt="" />
-              <div class="weather-forecast-temperatures"></div>
-              <span class="weather-forecast-temperature-max">84°/</span
-              ><span class="weather-forecast-temperature-min">71°</span>
-            </div>
-            <div class="col">
-              Mon <br /><i class="fa-solid fa-cloud-showers-heavy"></i><br />
-              84°/<span class="night-temp">67°</span>
-            </div>
-            <div class="col">
-              Tue <br /><i class="fa-solid fa-cloud-sun"></i><br />
-              82°/<span class="night-temp">66°</span>
-            </div>
-            <div class="col">
-              Wed <br /><i class="fa-solid fa-cloud-sun"></i><br />
-              83°/<span class="night-temp">67°</span>
-            </div>
-            <div class="col">
-              Thu <br /><i class="fa-solid fa-cloud-sun"></i><br />
-              82°/<span class="night-temp">61°</span>
-            </div>
-          </div>
+          <div class="weather-forecast"></div>
         </div>
       </div>
       <footer>
