Removed Celsius conversion

--- a/index.html
+++ b/index.html
@@ -67,14 +67,11 @@
               <img src="#" alt="weather icon" id="current-weather-icon" /><span
                 id="current-temp-value"
               ></span
-              ><span class="temp-scale-selector"
-                ><a href="#" id="celsius" class="active">°C</a> |
-                <a href="#" id="fahrenheit">°F</a></span
-              >
+              ><span class="temp-scale-selector">°F</span>
             </div>
             <div class="col-2 weather-conditions">
               Humidity: <span id="humidity"></span>% <br />
-              Wind: <span id="wind"></span> km/h
+              Wind: <span id="wind"></span> mph
             </div>
           </div>
 
