--- a/index.html
+++ b/index.html
@@ -57,19 +57,19 @@
             </div>
           </form>
 
-          <div class="row current-weather">
-            <div class="col-5 location-data">
+          <div class="current-weather">
+            <div class="location-data">
               <h1></h1>
               <h2></h2>
               <h3></h3>
             </div>
-            <div class="col-4 temp-data">
+            <div class="temp-data">
               <img src="#" alt="weather icon" id="current-weather-icon" /><span
                 id="current-temp-value"
               ></span
               ><span class="temp-scale-selector">°F</span>
             </div>
-            <div class="col-2 weather-conditions">
+            <div class="weather-conditions">
               Humidity: <span id="humidity"></span>% <br />
               Wind: <span id="wind"></span> mph
             </div>
