--- a/index.html
+++ b/index.html
@@ -87,7 +87,10 @@
           >Open-source code</a
         >
         <span id="footer">by</span>
-        <a href="mailto:nadege.rodier@gmail.com" class="footer"
+        <a
+          href="https://incomparable-starburst-3e5eae.netlify.app/"
+          target="_blank"
+          class="footer"
           >Nadege Rodier</a
         >
       </footer>
