--- a/index.html
+++ b/index.html
@@ -80,17 +80,13 @@
         </div>
       </div>
       <footer>
-        <a
-          href="https://github.com/nadegerodier/weather-app"
-          target="_blank"
-          class="footer"
+        <a href="https://github.com/nadegerodier/weather-app" target="_blank"
           >Open-source code</a
         >
-        <span id="footer">by</span>
+        by
         <a
           href="https://incomparable-starburst-3e5eae.netlify.app/"
           target="_blank"
-          class="footer"
           >Nadege Rodier</a
         >
       </footer>
