--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     ></script>
     <link rel="stylesheet" href="src/styles.css" />
   </head>
-  <body background="images/pic_11.jpg">
+  <body>
     <div class="container">
       <div class="card">
         <div class="card-body shadow">
