Improved website responsiveness

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
               <div class="col-1">
                 <i class="fa-regular fa-compass compass"></i>
               </div>
-              <div class="col-8">
+              <div class="col-7 col-sm-8">
                 <div class="form-group">
                   <input
                     type="text"
