--- a/index.html
+++ b/index.html
@@ -4,24 +4,33 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>SheCodes Plus Weather App Project</title>
+    <title>Weather App</title>
+    <meta
+      name="description"
+      content="Weather App built using JavaScript by Nadege Rodier"
+    />
+
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css"
       rel="stylesheet"
       integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi"
       crossorigin="anonymous"
     />
+
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
       href="https://fonts.googleapis.com/css2?family=Noto+Serif+JP:wght@600&display=swap"
       rel="stylesheet"
     />
+
     <script src="https://unpkg.com/axios@1.1.2/dist/axios.min.js"></script>
+
     <script
       src="https://kit.fontawesome.com/bb0a51cd49.js"
       crossorigin="anonymous"
     ></script>
+
     <link rel="stylesheet" href="src/styles.css" />
   </head>
   <body>
@@ -31,7 +40,10 @@
           <form class="search-box">
             <div class="row">
               <div class="col-1">
-                <i class="fa-regular fa-compass compass"></i>
+                <i
+                  class="fa-regular fa-compass compass"
+                  title="Get the weather for your current location"
+                ></i>
               </div>
               <div class="col-7 col-sm-8">
                 <div class="form-group">
@@ -87,6 +99,7 @@
         <a
           href="https://incomparable-starburst-3e5eae.netlify.app/"
           target="_blank"
+          title="Check out my portfolio!"
           >Nadege Rodier</a
         >
       </footer>
