--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
               <img src="#" alt="weather icon" id="current-weather-icon" /><span
                 id="current-temp-value"
               ></span
-              ><span class="temp-scale-selector">°F</span>
+              ><span class="unit">°F</span>
             </div>
             <div class="weather-conditions">
               Humidity: <span id="humidity"></span>% <br />
