--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
                   <input
                     type="submit"
                     value="Search"
-                    class="btn btn-light search-button shadow-sm"
+                    class="btn btn-light search-button"
                   />
                 </div>
               </div>
